# clouddoc

./: .env.example  .gitignore  AGENTS.md  DEVELOPMENT_PROGRESS.md  README.md  clouddoc-mcp-design.md  document-editor-test-plan.md  document-permission-sharing-prd.md  link-card-video-analysis-20260331.md  text-block-unified-surface-design.md
apps/api/: .env.example  README.md  pyproject.toml
apps/api/app/: main.py
apps/api/app/api/: router.py
apps/api/app/core/: config.py  db.py
apps/api/app/models/: __init__.py  comment.py  document.py  event.py  folder.py  integration.py  mcp.py  mixins.py  notification.py  organization.py  preference.py  session.py  share.py  space.py  template.py  user.py
apps/api/app/schemas/: auth.py  document.py  folder.py  integration.py  notification.py  organization.py  permission.py  preference.py  session.py  share.py  space.py  template.py
apps/api/app/services/: actor_context.py  auth_service.py  bootstrap_service.py  comment_service.py  document_permission_service.py  document_service.py  docx_import_service.py  event_stream_service.py  folder_service.py  integration_service.py  markdown_service.py  notification_service.py  organization_management_service.py  organization_service.py  permission_service.py  preference_service.py  (+4 more)
apps/api/sql/: 001_init.sql
apps/api/tests/: conftest.py  test_auth_api.py  test_documents_api.py  test_favorites_api.py  test_folders_api.py  test_integrations_api.py  test_link_preview_api.py  test_organization_management_api.py  test_organizations_api.py  test_search_api.py  test_templates_api.py
(+98 files in other folders)
