[project]
name = "clouddoc-api"
version = "0.1.0"
description = "FastAPI backend for the CloudDoc application"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "alembic>=1.16.0",
  "fastapi>=0.116.0",
  "pydantic-settings>=2.10.0",
  "python-multipart>=0.0.20",
  "psycopg[binary]>=3.2.0",
  "python-jose[cryptography]>=3.5.0",
  "sqlalchemy>=2.0.40",
  "uvicorn[standard]>=0.35.0",
]

[dependency-groups]
dev = [
  "httpx>=0.28.0",
  "pytest>=8.4.0",
  "ruff>=0.12.0",
]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.pytest.ini_options]
pythonpath = ["."]
